# typed-rest

./: README.md  default.nix
client/: cabal.nix  typed-rest-client.cabal
client-http-client/: typed-rest-client-http-client.cabal
client-http-client/src/Network/HTTP/Rest/Client/: HttpClient.hs
client/src/Network/HTTP/Rest/: Client.hs
client/test/: unit-main.hs
client/test/Test/Network/HTTP/Rest/: Client.hs
encoding-json/: .ghci  typed-rest-encoding-json.cabal
encoding-json/src/Data/Aeson/: NonRFC.hs
encoding-json/src/Network/HTTP/Rest/Encoding/: JSON.hs
nix/: haskell-packages.nix
server/: typed-rest-server.cabal
server-wai/: .ghci  cabal.nix  typed-rest-server-wai.cabal
server-wai/src/Network/HTTP/Rest/Server/: Wai.hs
server/src/Network/HTTP/Rest/: Server.hs
test/: integration-main.hs
types/: .ghci  cabal.nix  typed-rest-types.cabal
types/src/Network/HTTP/Rest/: Client.hs  Match.hs  Server.hs  Signature.hs
types/test/: unit-main.hs
types/test/Test/: PayloadEncoding.hs
types/test/Test/Network/HTTP/Rest/: Client.hs  Match.hs  Server.hs
