name: typed-rest-client
version: 0.0.0.1
synopsis: A typesafe client interface to REST resources
description:
  The client interface to REST resources described using 'RestSig's from
  typed-rest-types.
homepage: https://github.com/plcplc/typed-rest
license: GPL-3
license-file: LICENSE
author: Philip Lykke Carlsen
maintainer: plcplc@gmail.com
build-type: Simple
cabal-version: >=1.10

flag releaseBuild
  description: Build for release. I.e. enable more checks.
  default: True
  manual: True

library
  exposed-modules:
    Network.HTTP.Rest.Client

  build-depends:
    aeson,
    attoparsec,
    base == 4.7.*,
    bytestring,
    containers,
    data-default,
    http-client,
    http-types,
    text,
    typed-rest-types,
    utf8-string

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

test-suite unittest

  type: exitcode-stdio-1.0
  main-is: unit-main.hs

  Other-Modules:
    Test.Network.HTTP.Rest.Client

  hs-source-dirs: test

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
    aeson,
    base == 4.7.*,
    bytestring,
    containers,
    data-default,
    hspec,
    hspec-expectations,
    http-client,
    http-types,
    mtl,
    stm,
    text,
    transformers,
    typed-rest-client,
    typed-rest-types,
    wai,
    wai-test,
    warp

  default-language: Haskell2010
