name: typed-rest-types
version: 0.0.0.1
synopsis: Typed REST resources - Common definitions for server and client
description:
  The machinery for the definition typed REST resources. This is used in the
  companinon-packages: typed-rest-client and typed-rest-server.
homepage: https://github.com/plcplc/typed-rest
license: GPL-3
license-file: LICENSE
author: Philip Lykke Carlsen
maintainer: plcplc@gmail.com
build-type: Simple
cabal-version: >=1.10

flag releaseBuild
  description: Build for release. I.e. enable more checks.
  default: True
  manual: True

library
  exposed-modules:
    Network.HTTP.Rest.Client
    Network.HTTP.Rest.Match
    Network.HTTP.Rest.Server
    Network.HTTP.Rest.Signature

  build-depends:
    base == 4.7.*,
    http-types,
    text

  hs-source-dirs: src

  default-language: Haskell2010

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

test-suite unittest

  type: exitcode-stdio-1.0
  main-is: unit-main.hs

  Other-Modules:
    Test.PayloadEncoding
    Test.Network.HTTP.Rest.Client
    Test.Network.HTTP.Rest.Server

  hs-source-dirs: test

  if flag(releaseBuild)
    ghc-options: -Wall -fno-warn-unused-do-bind -Werror
  else
    ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
    base == 4.7.*,
    data-default,
    hspec,
    http-types,
    text,
    mtl,
    typed-rest-types

  default-language: Haskell2010
